<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/app_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scenes"
            android:icon="@drawable/ic_view_list"
            android:title="@string/Scenes" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_account_balance_wallet"
            android:title="@string/Balance" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/Statistics" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History" />
    </group>
    <group
        android:id="@+id/system_menu"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/Settings" />
    </group>
</menu>
