<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="android.view.View" />
        <variable name="vm" type="com.demo.online.user.SignVM"/>
    </data>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{vm.inProgress ? View.GONE : View.VISIBLE}"
        tools:context="com.demo.online.user.SignUpFragment">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Login progress -->


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorAccent">

                        <AutoCompleteTextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/NamePlaceholder"
                            android:maxLines="1"
                            android:text="@{vm.name}"
                            app:textChangedListener="@{vm.nameWatcher}"
                            android:singleLine="true"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/colorAccent"
                            android:textSize="20sp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorAccent">

                        <AutoCompleteTextView
                            android:id="@+id/usersurname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/SurnamePlaceholder"
                            android:maxLines="1"
                            android:text="@{vm.surname}"
                            app:textChangedListener="@{vm.surnameWatcher}"
                            android:singleLine="true"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/colorAccent"
                            android:textSize="20sp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorAccent">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:text="@{vm.email}"
                            app:textChangedListener="@{vm.emailWatcher}"
                            android:singleLine="true"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/colorAccent"
                            android:textSize="20sp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorAccent">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/PasswordPlaceholder"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text="@{vm.password}"
                            app:textChangedListener="@{vm.passwordWatcher}"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/colorAccent"
                            android:singleLine="true"
                            android:textSize="20sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/colorAccent">

                        <EditText
                            android:id="@+id/repassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/RepeatPasswordPlaceholder"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text="@{vm.repassword}"
                            app:textChangedListener="@{vm.rePasswordWatcher}"
                            android:textColorHint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:backgroundTint="@color/colorAccent"
                            android:singleLine="true"
                            android:textSize="20sp" />

                    </android.support.design.widget.TextInputLayout>



                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/SignUp"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sign_in_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/double_grid_step"
                        android:text="@string/SignIn"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/single_grid_step"
                android:visibility="@{!vm.inProgress ? View.GONE : View.VISIBLE}" />
        </LinearLayout>
    </FrameLayout>

</layout>